<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="150dp"
        tools:layout_conversion_absoluteWidth="150dp"
        tools:layout_conversion_wrapHeight="1344"
        tools:layout_conversion_wrapWidth="1344" />

    <EditText
        android:id="@+id/signup_et_username"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="@dimen/dimen_16dp"
        android:paddingLeft="@dimen/dimen_16dp"
        android:paddingTop="3dp"
        android:paddingEnd="@dimen/dimen_16dp"
        android:paddingRight="@dimen/dimen_16dp"
        android:paddingBottom="3dp"
        android:singleLine="true"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:layout_conversion_absoluteHeight="40dp"
        tools:layout_conversion_wrapHeight="93"
        tools:layout_conversion_wrapWidth="353" />

    <EditText
        android:id="@+id/signup_et_email"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp"
        android:singleLine="true"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_et_username"
        tools:layout_conversion_absoluteHeight="40dp"
        tools:layout_conversion_absoluteWidth="371dp"
        tools:layout_conversion_wrapHeight="93"
        tools:layout_conversion_wrapWidth="239" />

    <EditText
        android:id="@+id/signup_et_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp"
        android:singleLine="true"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_et_email"
        tools:layout_conversion_absoluteHeight="40dp"
        tools:layout_conversion_absoluteWidth="371dp"
        tools:layout_conversion_wrapHeight="93"
        tools:layout_conversion_wrapWidth="340" />

    <EditText
        android:id="@+id/signup_et_confirm_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="3dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="3dp"
        android:singleLine="true"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_et_password"
        tools:layout_conversion_absoluteHeight="40dp"
        tools:layout_conversion_absoluteWidth="371dp"
        tools:layout_conversion_wrapHeight="93"
        tools:layout_conversion_wrapWidth="546" />


    <Button
        android:id="@+id/signup_btn_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@drawable/button_selector"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_et_confirm_password"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="331dp"
        tools:layout_conversion_wrapHeight="168"
        tools:layout_conversion_wrapWidth="308" />


    <TextView
        android:id="@+id/signup_already_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/already_account"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/signup_btn_signup"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn_signup"
        tools:layout_conversion_absoluteHeight="21dp"
        tools:layout_conversion_absoluteWidth="161dp"
        tools:layout_conversion_wrapHeight="75"
        tools:layout_conversion_wrapWidth="564" />

    <TextView
        android:id="@+id/signup_tv_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_in"
        android:textColor="@color/bg_tab_text_color"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/signup_already_account"
        app:layout_constraintStart_toEndOf="@+id/signup_already_account"
        tools:layout_conversion_absoluteHeight="21dp"
        tools:layout_conversion_absoluteWidth="48dp"
        tools:layout_conversion_wrapHeight="75"
        tools:layout_conversion_wrapWidth="169" />


</androidx.constraintlayout.widget.ConstraintLayout>